tests/expectations/compiler/finalize/unknown_mapping_operation_fail.out
Error [ETYC0372005]: Unknown function `test.aleo/Mapping::has_key`
    --> compiler-test:12:26
     |
  12 |      let has_key: bool = Mapping::has_key(account, receiver);
     |                          ^^^^^^^^^^^^^^^^
